Fixed an issue where mobile menu bar was covering nav bar on desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -405,15 +405,7 @@ html, body {
 }
 
 .mobile-header {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: var(--bg-color);
-    padding: 1rem 0;
-    text-align: center;
-    z-index: 190;
+    display: none;
 }
 
 @media (max-width: 768px) {
@@ -433,6 +425,7 @@ html, body {
         padding: 1rem 0;
         text-align: center;
         z-index: 190;
+        /* border-bottom: 1px solid #ddd; */
     }
     [data-theme="dark"] .mobile-header {
         /* border-bottom: 1px solid #333; */
@@ -443,6 +436,9 @@ html, body {
         color: var(--link-color);
         cursor: pointer;
         text-decoration: underline;
+    }
+    .mobile-header-padding {
+        padding-top: 4rem;
     }
     .side-nav {
         position: fixed;
